demo code/MFC (VC++)/DLBT/DLBT.h

#define DLBT_API extern "C"  __declspec(dllexport)
#define DLBT_API extern "C"  __declspec(dllimport)
struct DLBT_KERNEL_START_PARAM
{
    BOOL bStartLocalDiscovery;		
    BOOL bStartUPnP;				
    BOOL bStartDHT;					
    BOOL bLanUser;                  
    BOOL bVODMode;                  
    USHORT  startPort;	            
    USHORT  endPort;				
    DLBT_KERNEL_START_PARAM ()
    {
        bStartLocalDiscovery = TRUE;
        bStartUPnP = TRUE;
        bStartDHT = TRUE;
        bLanUser = FALSE;
        bVODMode = FALSE;
        startPort = 0;
        endPort = 0;
    }
};
DLBT_API void WINAPI DLBT_SetLsdSetting (int interval_seconds, bool bUseBroadcast);
DLBT_API BOOL WINAPI DLBT_Startup (
    DLBT_KERNEL_START_PARAM * param = NULL, 
    LPCSTR  privateProtocolIDs = NULL,  
    bool    seedServerMode = false,     
    LPCSTR  productNum = NULL           
    );
DLBT_API USHORT WINAPI DLBT_GetListenPort ();
DLBT_API void WINAPI DLBT_Shutdown ();
DLBT_API void WINAPI DLBT_PreShutdown ();
DLBT_API void WINAPI DLBT_SetUploadSpeedLimit (int limit);
DLBT_API void WINAPI DLBT_SetDownloadSpeedLimit (int limit);
DLBT_API void WINAPI DLBT_SetMaxUploadConnection (int limit);
DLBT_API void WINAPI DLBT_SetMaxTotalConnection (int limit);
DLBT_API void WINAPI DLBT_SetMaxHalfOpenConnection (int limit);
DLBT_API void WINAPI DLBT_SetLocalNetworkLimit (
    bool    limit,              
    int     downSpeedLimit,     
    int     uploadSpeedLimit    
    );
DLBT_API void WINAPI DLBT_SetFileScanDelay (DWORD circleCount, DWORD sleepMs);
DLBT_API void WINAPI DLBT_UseServerModifyTime(BOOL bUseServerTime);
DLBT_API void WINAPI DLBT_EnableUDPTransfer(BOOL bEnabled);
DLBT_API void WINAPI DLBT_SetP2PTransferAsHttp (bool bHttpOut, bool bAllowedIn = true);
DLBT_API BOOL WINAPI DLBT_AddHoleServer(LPCSTR ip, short port);
DLBT_API void WINAPI DLBT_AddServerIP (LPCSTR ip);
DLBT_API void WINAPI DLBT_AddBanServerUrl (LPCSTR url);
DLBT_API BOOL WINAPI DLBT_SetStatusFileSavePeriod (
    int             iPeriod,               
    int             iPieceCount            
    );
DLBT_API void WINAPI DLBT_SetReportIP (LPCSTR ip);
DLBT_API LPCSTR WINAPI DLBT_GetReportIP ();
DLBT_API void WINAPI DLBT_SetUserAgent (LPCSTR agent);
DLBT_API void WINAPI DLBT_SetMaxCacheSize (DWORD size);
DLBT_API void WINAPI DLBT_SetPerformanceFactor(
    int             socketRecvBufferSize,      
    int             socketSendBufferSize,      
    int             maxRecvDiskQueueSize,      
    int             maxSendDiskQueueSize       
    );
DLBT_API void WINAPI DLBT_DHT_Start (USHORT port = 0);
DLBT_API void WINAPI DLBT_DHT_Stop ();
DLBT_API BOOL WINAPI DLBT_DHT_IsStarted ();
struct DLBT_PROXY_SETTING
{
    char    proxyHost [256];    
    int     nPort;              
    char    proxyUser [256];    
    char    proxyPass [256];    
    enum DLBT_PROXY_TYPE
    {
        DLBT_PROXY_NONE,            
        DLBT_PROXY_SOCKS4,          
        DLBT_PROXY_SOCKS5,          
        DLBT_PROXY_SOCKS5A,         
        DLBT_PROXY_HTTP,            
        DLBT_PROXY_HTTPA            
    };
    DLBT_PROXY_TYPE proxyType;      
};
DLBT_API void WINAPI DLBT_SetProxy (
    DLBT_PROXY_SETTING  proxySetting,   
    int                 proxyTo         
    );
DLBT_API void WINAPI DLBT_GetProxySetting (DLBT_PROXY_SETTING * proxySetting, int proxyTo);
enum DLBT_ENCRYPT_OPTION
{
    DLBT_ENCRYPT_NONE,                  
    DLBT_ENCRYPT_COMPATIBLE,            
    DLBT_ENCRYPT_FULL,                  
    DLBT_ENCRYPT_FORCED,                
};
enum DLBT_ENCRYPT_LEVEL
{
    DLBT_ENCRYPT_PROTOCOL,          
    DLBT_ENCRYPT_DATA,              
    DLBT_ENCRYPT_PROTOCOL_MIX,      
    DLBT_ENCRYPT_ALL                
};
DLBT_API void WINAPI DLBT_SetEncryptSetting (
    DLBT_ENCRYPT_OPTION     encryptOption,      
    DLBT_ENCRYPT_LEVEL      encryptLevel        
    );
enum DLBT_FILE_ALLOCATE_TYPE
{
    FILE_ALLOCATE_REVERSED  = 0,   
    FILE_ALLOCATE_SPARSE,          
    FILE_ALLOCATE_COMPACT          
};
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize (
        LPCWSTR             torrentFile,                    
        LPCWSTR             outPath,                        
        LPCWSTR             statusFile = L"",           
        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         
        BOOL                bPaused = FALSE,                
        BOOL                bQuickSeed = FALSE,             
        LPCSTR              password = NULL,                
        LPCWSTR             rootPathName = NULL,             
        BOOL                bPrivateProtocol = FALSE,        
		BOOL				bZipTransfer = FALSE			
        );
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromBuffer (
        LPBYTE              torrentFile,                    
        DWORD               dwTorrentFileSize,              
        LPCWSTR             outPath,                        
        LPCWSTR             statusFile = L"",              
        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         
        BOOL                bPaused = FALSE,
        BOOL                bQuickSeed = FALSE,             
        LPCSTR              password = NULL,                
        LPCWSTR             rootPathName = NULL,             
        BOOL                bPrivateProtocol = FALSE,
		BOOL				bZipTransfer = FALSE			
        );
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromTorrentHandle (
        HANDLE              torrentHandle,                    
        LPCWSTR             outPath,                        
        LPCWSTR             statusFile = L"",              
        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         
        BOOL                bPaused = FALSE,
        BOOL                bQuickSeed = FALSE,              
        LPCWSTR             rootPathName = NULL,             
        BOOL                bPrivateProtocol = FALSE,
		BOOL				bZipTransfer = FALSE			
    );
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromInfoHash (
        LPCSTR              trackerURL,                     
        LPCSTR              infoHash,                       
        LPCWSTR             outPath,
        LPCWSTR             name = NULL,                    
        LPCWSTR             statusFile = L"",              
        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         
        BOOL                bPaused = FALSE,
        LPCWSTR             rootPathName = NULL,            
        BOOL                bPrivateProtocol = FALSE,
		BOOL				bZipTransfer = FALSE			
        );
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromUrl (
    LPCSTR              url,                            
    LPCWSTR             outPath,                        
    LPCWSTR             statusFile = L"",              
    DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,
    BOOL                bPaused = FALSE,
    LPCWSTR             rootPathName = NULL,            
    BOOL                bPrivateProtocol = FALSE,
	BOOL				bZipTransfer = FALSE			
    );
DLBT_API HANDLE WINAPI DLBT_Downloader_InitializeAsUpdater (
    LPCWSTR             curTorrentFile,    
    LPCWSTR             newTorrentFile,   
 	LPCWSTR             curPath,    
    LPCWSTR             statusFile = L"", 
 	DLBT_FILE_ALLOCATE_TYPE    type = FILE_ALLOCATE_SPARSE, 
 	BOOL                bPaused = FALSE,     
  	LPCSTR              curTorrentPassword = NULL,   
 	LPCSTR              newTorrentFilePassword = NULL, 
 	LPCWSTR             rootPathName = NULL,
	BOOL				bPrivateProtocol = FALSE,
	float		*       fProgress = NULL,         
	BOOL				bZipTransfer = FALSE			
);
DLBT_API float WINAPI DLBT_Downloader_GetOldTorrentProgress (
	LPCWSTR             curTorrentFile,    
	LPCWSTR             newTorrentFile,   
	LPCWSTR             curPath,    
	LPCWSTR             statusFile = L"", 
	LPCSTR              curTorrentPassword = NULL,
	LPCSTR              newTorrentFilePassword = NULL
	);
DLBT_API void WINAPI DLBT_Downloader_ReleaseAllFiles(HANDLE hDownloader);
DLBT_API BOOL WINAPI DLBT_Downloader_IsReleasingFiles(HANDLE hDownloader);
enum DLBT_RELEASE_FLAG
{
    DLBT_RELEASE_NO_WAIT = 0,           
    DLBT_RELEASE_WAIT = 1,              
    DLBT_RELEASE_DELETE_STATUS = 2,     
    DLBT_RELEASE_DELETE_ALL = 4         
};
DLBT_API HRESULT WINAPI DLBT_Downloader_Release (HANDLE hDownloader, int nFlag = DLBT_RELEASE_NO_WAIT);
DLBT_API void WINAPI DLBT_SetP2SPExtName (LPCSTR extName, bool bUseRandParam, bool bUtf8);
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPublisherUrl (
    HANDLE      hTorrent,       
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_MakeURL (  
    HANDLE      hTorrent,
    LPSTR       pBuffer,                
    int  *      pBufferSize             
    );
DLBT_API int WINAPI DLBT_Torrent_GetTrackerCount (HANDLE hTorrent);
DLBT_API LPCSTR WINAPI DLBT_Torrent_GetTrackerUrl (
    HANDLE      hTorrent,       
    int         index           
    );
DLBT_API UINT64 WINAPI DLBT_Torrent_GetTotalFileSize (HANDLE hTorrent);
DLBT_API int WINAPI DLBT_Torrent_GetFileCount (HANDLE hTorrent);
DLBT_API BOOL WINAPI DLBT_Torrent_IsPadFile (HANDLE hTorrent, int index);
DLBT_API UINT64 WINAPI DLBT_Torrent_GetFileSize (
    HANDLE      hTorrent,           
    int         index               
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetFilePathName (
    HANDLE      hTorrent,           
    int         index,              
    LPWSTR      pBuffer,            
    int     *   pBufferSize        
    );
DLBT_API int WINAPI DLBT_Torrent_GetPieceCount (HANDLE hTorrent);
DLBT_API int WINAPI DLBT_Torrent_GetPieceSize (HANDLE hTorrent);
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPieceInfoHash (
    HANDLE      hTorrent,           
    int         index,              
    LPSTR       pBuffer,            
    int     *   pBufferSize         
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetInfoHash (
    HANDLE      hTorrent,           
    LPSTR       pBuffer,            
    int     *   pBufferSize         
    );
struct DLBT_TM_ITEM     
{
	DLBT_TM_ITEM(): fileSize (0) {}
	UINT64  fileSize;      
	char	name[256];     
	LPCSTR	url;           
	LPCSTR  comment;       
};
struct DLBT_TM_LIST 
{
	int				count;      
	DLBT_TM_ITEM	items[1];   
};
DLBT_API HRESULT WINAPI DLBT_TM_AddSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);
DLBT_API HRESULT WINAPI DLBT_TM_RemoveSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);
DLBT_API HRESULT WINAPI DLBT_TM_GetSelfTorrentList (DLBT_TM_LIST ** ppList);
DLBT_API HRESULT WINAPI DLBT_TM_GetRemoteTorrentList (DLBT_TM_LIST ** ppList);
DLBT_API HRESULT WINAPI DLBT_TM_FreeTMList (DLBT_TM_LIST * pList);
DLBT_API void WINAPI DLBT_TM_ClearRemoteTorrentList ();
DLBT_API void WINAPI DLBT_TM_ClearSelfTorrentList ();
DLBT_API BOOL WINAPI DLBT_EnableTorrentMarket (bool bEnable);
enum PORT_TYPE
{
    TCP_PORT        = 1,            
    UDP_PORT                        
};
DLBT_API BOOL WINAPI DLBT_AddAppToWindowsXPFirewall (
    LPCWSTR      appFilePath,        
    LPCWSTR      ruleName            
    );
DLBT_API void WINAPI DLBT_AddUPnPPortMapping(
	USHORT      nExternPort,        
	USHORT      nLocalPort,         
	PORT_TYPE   nPortType,          
	LPCSTR      appName             
	);
DLBT_API DWORD WINAPI DLBT_GetCurrentXPLimit ();
DLBT_API BOOL WINAPI DLBT_ChangeXPConnectionLimit (DWORD num);
struct KERNEL_INFO
{
    USHORT                      port;                           
    BOOL                        dhtStarted;                     
    int                         totalDownloadConnectionCount;   
    int                         downloadCount;                  
    int                         totalDownloadSpeed;             
    int                         totalUploadSpeed;               
    UINT64                      totalDownloadedByteCount;       
    UINT64                      totalUploadedByteCount;         
    int                         peersNum;                       
    int                         dhtConnectedNodeNum;            
    int                         dhtCachedNodeNum;               
    int                         dhtTorrentNum;                  
};
struct DOWNLOADER_INFO
{
    DLBT_DOWNLOAD_STATE          state;                         
    float                       percentDone;                    
    int                         downConnectionCount;            
    int                         downloadLimit;                  
    int                         connectionCount;                
    int                         totalCompletedSeeds;            
    int                         inCompleteNum;                  
    int                         seedConnected;                  
    int                         totalCurrentSeedCount;          
    int                         totalCurrentPeerCount;          
    float                       currentTaskProgress;            
    BOOL                        bReleasingFiles;                
    UINT                        downloadSpeed;                  
    UINT                        uploadSpeed;                    
    UINT                        serverPayloadSpeed;             
    UINT                        serverTotalSpeed;               
    UINT64                      wastedByteCount;                
    UINT64                      totalDownloadedBytes;           
    UINT64                      totalUploadedBytes;             
    UINT64                      totalWantedBytes;               
    UINT64                      totalWantedDoneBytes;           
    UINT64                      totalServerPayloadBytes;        
    UINT64                      totalServerBytes;               
    UINT64                      totalPayloadBytesDown;          
    UINT64                      totalBytesDown;                 
    BOOL                        bHaveTorrent;                   
    UINT64                      totalFileSize;                  
    UINT64                      totalFileSizeExcludePadding;    
    UINT64                      totalPaddingSize;               
    int                         pieceCount;                     
    int                         pieceSize;                      
    char                        infoHash [256];                 
};
struct PEER_INFO
{
    int                         count;                          
    PEER_INFO_ENTRY             entries [1];                    
};
DLBT_API HRESULT WINAPI DLBT_GetKernelInfo (KERNEL_INFO * info);
DLBT_API HRESULT WINAPI DLBT_GetDownloaderInfo (HANDLE hDownloader, DOWNLOADER_INFO * info);
DLBT_API HRESULT WINAPI DLBT_GetDownloaderPeerInfoList (HANDLE hDownloader, PEER_INFO ** ppInfo);
DLBT_API void WINAPI DLBT_FreeDownloaderPeerInfoList (PEER_INFO * pInfo);
DLBT_API void WINAPI DLBT_SetDHTFilePathName (LPCWSTR dhtFile);
DLBT_API void WINAPI DLBT_Set_IO_OP(void * op);
DLBT_API void WINAPI DLBT_InitDefault_IO_OP(void * op);
DLBT_API void * WINAPI DLBT_Get_IO_OP();
DLBT_API void * WINAPI DLBT_Get_RAW_IO_OP();