demo code/Delphi/dlbt.pas


// 返回发布者网址
function DLBT_Torrent_GetPublisherUrl (
                                 hTorrent: HANDLE;         // 种子文件句柄
                                 pBuffer: LPWSTR;           // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回发布者网址的实际大小
                                 pBufferSize: pinteger     // 传入存放信息的内存大小，传出发布者网址的实际大小
                                 ): HRESULT; stdcall;

// 通过种子，制作一个可以不需要种子即可下载的网址，参考DLBT_Downloader_Initialize_FromUrl
function DLBT_Torrent_MakeURL (  
                                 hTorrent: HANDLE;         // 种子文件句柄
                                 pBuffer: LPSTR ;          // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回名字的实际大小
                                 pBufferSize: pinteger     // 传入buffer的内存大小，传出URL的实际大小
                                 ): HRESULT; stdcall;

function DLBT_Torrent_GetTrackerCount(hTorrent: HANDLE): int; stdcall;

function DLBT_Torrent_GetTrackerUrl(
                                    hTorrent: HANDLE;       // 种子文件句柄
                                    index:int               // Tracker的序号，从0开始
                                    ): LPCSTR; stdcall;

// 获取种子中包含的所有文件的总大小
function DLBT_Torrent_GetTotalFileSize (hTorrent:HANDLE) : UINT64; stdcall;

// 单个种子中包含多个文件时的一些接口,index为文件的序列号，从0开始
function  DLBT_Torrent_GetFileCount (hTorrent:HANDLE): int; stdcall;
function  DLBT_Torrent_IsPadFile (
                                   hTorrent: HANDLE;       // 种子文件句柄
                                   index:int               // Tracker的序号，从0开始
                                   ): BOOL; stdcall;

// 单个种子中包含多个文件时的一些接口,index为文件的序列号，从0开始
function  DLBT_Torrent_GetFileSize(
     hTorrent: HANDLE;     // 种子文件句柄
     index:    int        // 要获取大小的文件的序号，文件序号是从0开始的
     ): UINT64; stdcall;
// 获取种子中每个文件的名字
function  DLBT_Torrent_GetFilePathName(
                                         hTorrent: HANDLE;           // 种子文件句柄
                                         index: int;                    // 要获取名字的文件的序号，文件序号是从0开始的
                                         pBuffer: LPCWSTR;               // 传出文件名
                                         pBufferSize: pinteger         // 传入buffer的大小，传出文件名的实际长度
                                         ): HRESULT; stdcall;


// 获取分块数目
function DLBT_Torrent_GetPieceCount (hTorrent:HANDLE): int; stdcall;
// 获取分块大小
function DLBT_Torrent_GetPieceSize (hTorrent:HANDLE): int; stdcall;

// 获取种子中每个分块的Hash值
function DLBT_Torrent_GetPieceInfoHash (
        hTorrent: HANDLE;           // 种子文件句柄
        index: int;                 // 要获取的Piece的序号，piece的数目可以通过DLBT_Torrent_GetPieceCount获得
        pBuffer: LPSTR;               // 传出Hash字符串
        pBufferSize: pinteger         // 传入pBuffer的大小，pieceInfoHash固定为20个字节，因此此处应该是20的长度。
    ): HRESULT; stdcall;

// 获得种子文件的InfoHash值
function DLBT_Torrent_GetInfoHash (
	      hTorrent: HANDLE;         // 种子文件句柄
        pBuffer: LPSTR;           // 传出InfoHash的内存缓冲
        pBufferSize: pinteger     //传入缓冲的大小，传出实际的InfoHash的长度
    ): HRESULT; stdcall;

{
以下接口暂时没有翻译，请参照MFC示例中的DLBT/DLBT.h文件，仿照其它接口自己翻译
        有困难可以联系作者解决

// **************************** 以下是种子市场有关的接口 *****************************
// 种子市场仅在商业版本中提供，免费试用版中暂时不提供该功能
struct DLBT_TM_ITEM     //标记种子市场中的一个种子文件
(
	DLBT_TM_ITEM(): fileSize (0) 
	
	UINT64  fileSize;      // the size of this file
	char	name[256];     // 名字
	LPCSTR	url;           // 用于下载的url
	LPCSTR  comment;       // 种子描述
);

struct DLBT_TM_LIST //标记种子市场中的一批种子文件（多个）
(
	int				count;      //数目
	DLBT_TM_ITEM	items[1];   //种子列表
);

// 在本机的种子市场中添加一个种子文件
DLBT_API HRESULT WINAPI DLBT_TM_AddSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);
// 在本机的种子市场中移除一个种子文件
DLBT_API HRESULT WINAPI DLBT_TM_RemoveSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);

// 获取本机种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
DLBT_API HRESULT WINAPI DLBT_TM_GetSelfTorrentList (DLBT_TM_LIST ** ppList);
// 获取其它人种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
DLBT_API HRESULT WINAPI DLBT_TM_GetRemoteTorrentList (DLBT_TM_LIST ** ppList);

// 释放DLBT_TM_GetSelfTorrentList或者DLBT_TM_GetRemoteTorrentList获取到的种子列表的内存
DLBT_API HRESULT WINAPI DLBT_TM_FreeTMList (DLBT_TM_LIST * pList);

// 清空所有获取到的其它人的种子列表
DLBT_API void WINAPI DLBT_TM_ClearRemoteTorrentList ();
// 清空所有自己种子市场中的种子列表
DLBT_API void WINAPI DLBT_TM_ClearSelfTorrentList ();

// 设置一下是否启用种子市场，默认不启用。
DLBT_API BOOL WINAPI DLBT_EnableTorrentMarket (bool bEnable);

}

// *********************  以下是防火墙和UPnP穿透等P2P辅助性接口 **********************


//  将某个应用程序添加到ICF防火墙的例外中去，可独立于内核应用，不启动内核仍然可以使用该函数
function  DLBT_AddAppToWindowsXPFirewall(
                                         appFilePath: LPCWSTR;        // 程序的路径（包括exe的名字）
                                         ruleName: LPCWSTR            // 在防火墙的例外中显示的这条规则的名字
                                         ): boolean; stdcall;
// 将某个端口加入UPnP映射，点量BT内部的所有端口已经自动加入，不需要再次加入，这里提供出来是供外部程序加入自己所需端口
procedure DLBT_AddUPnPPortMapping(
	nExternPort: USHORT;        // NAT要打开的外部端口
	nLocalPort: USHORT;        // 映射的内部端口（局域网端口），一般是程序在监听的端口
	nPortType: PORT_TYPE;          // 端口类型（UDP还是TCP）
        appName: LPCSTR             // 在NAT上显示的这条规则的名字
	); stdcall;

// 获得当期系统的并发连接数限制，如果返回0则表示系统可能不是受限的XP系统，无需修改连接数限制
// 可独立于内核使用，启动内核前即可使用
function  DLBT_GetCurrentXPLimit(): DWORD; stdcall;

// 修改XP的并发连接数限制，返回BOOL标志是否成功
function  DLBT_ChangeXPConnectionLimit(num: DWORD): boolean; stdcall;

// 获取批量信息的接口
function  DLBT_GetKernelInfo(info: PKERNEL_INFO): HRESULT; stdcall;
function  DLBT_GetDownloaderInfo(hDownloader: HANDLE; info: PDOWNLOADER_INFO): HRESULT; stdcall;

// 获得完成节点列表，列表由DLL分配，因此，需要调用DLBT_FreeDownloaderPeerInfoList函数释放该内存
function  DLBT_GetDownloaderPeerInfoList(hDownloader: HANDLE; ppinfo: PPEER_INFO): HRESULT; stdcall;
procedure DLBT_FreeDownloaderPeerInfoList(pinfo: PPEER_INFO); stdcall;
procedure DLBT_SetDHTFilePathName(dhtFile: LPCWSTR); stdcall;

// 可以自定义IO操作的函数（可以将BT里面的读写文件等所有操作外部进行处理，替换内部的读写函数等）
// 该功能为高级版功能，请联系点量获取技术支持，默认版本中不开放该功能

// 设置IO操作的接管结构体的指针
procedure DLBT_Set_IO_OP(op: Pointer); stdcall;
// 对结构体里面的所有函数先赋值默认的函数指针
procedure DLBT_InitDefault_IO_OP(op: Pointer); stdcall;
// 获取系统内部目前在用的IO对象的指针
function DLBT_Get_IO_OP():Pointer; stdcall;

// 获取系统原始IO的指针
function DLBT_Get_RAW_IO_OP():Pointer; stdcall;


implementation

  function  DLBT_Startup; stdcall; external DLBT_Library name 'DLBT_Startup';
  function  DLBT_GetListenPort; stdcall; external DLBT_Library name 'DLBT_GetListenPort';
  procedure DLBT_Shutdown; stdcall; external DLBT_Library name 'DLBT_Shutdown';
  procedure DLBT_PreShutdown; stdcall; external DLBT_Library name 'DLBT_PreShutdown';
  procedure DLBT_SetUploadSpeedLimit; stdcall; external DLBT_Library name 'DLBT_SetUploadSpeedLimit';
  procedure DLBT_SetDownloadSpeedLimit; stdcall; external DLBT_Library name 'DLBT_SetDownloadSpeedLimit';
  procedure DLBT_SetMaxUploadConnection; stdcall; external DLBT_Library name 'DLBT_SetMaxUploadConnection';
  procedure DLBT_SetMaxTotalConnection; stdcall; external DLBT_Library name 'DLBT_SetMaxTotalConnection';
  procedure DLBT_SetMaxHalfOpenConnection; stdcall; external DLBT_Library name 'DLBT_SetMaxHalfOpenConnection';
  procedure DLBT_SetLsdSetting; stdcall; external DLBT_Library name 'DLBT_SetLsdSetting';
  procedure DLBT_SetP2SPExtName; stdcall; external DLBT_Library name 'DLBT_SetP2SPExtName';
  procedure DLBT_SetLocalNetworkLimit; stdcall; external DLBT_Library name 'DLBT_SetLocalNetworkLimit';
  procedure DLBT_SetFileScanDelay; stdcall; external DLBT_Library name 'DLBT_SetFileScanDelay';
  procedure DLBT_UseServerModifyTime; stdcall; external DLBT_Library name 'DLBT_UseServerModifyTime';
  procedure DLBT_EnableUDPTransfer; stdcall; external DLBT_Library name 'DLBT_EnableUDPTransfer'; 
  procedure DLBT_SetP2PTransferAsHttp; stdcall; external DLBT_Library name 'DLBT_SetP2PTransferAsHttp';
  function DLBT_AddHoleServer; stdcall; external DLBT_Library name 'DLBT_AddHoleServer'; 
  procedure DLBT_AddServerIP; stdcall; external DLBT_Library name 'DLBT_AddServerIP';
  procedure DLBT_AddBanServerUrl; stdcall; external DLBT_Library name 'DLBT_AddBanServerUrl';
  function DLBT_SetStatusFileSavePeriod; stdcall; external DLBT_Library name 'DLBT_SetStatusFileSavePeriod';
  procedure DLBT_SetReportIP; stdcall; external DLBT_Library name 'DLBT_SetReportIP';
  function  DLBT_GetReportIP; stdcall; external DLBT_Library name 'DLBT_GetReportIP';
  procedure DLBT_SetUserAgent; stdcall; external DLBT_Library name 'DLBT_SetUserAgent';
  procedure DLBT_SetMaxCacheSize; stdcall; external DLBT_Library name 'DLBT_SetMaxCacheSize';
  procedure DLBT_SetPerformanceFactor; stdcall; external DLBT_Library name 'DLBT_SetPerformanceFactor';
  procedure DLBT_DHT_Start; stdcall; external DLBT_Library name 'DLBT_DHT_Start';
  procedure DLBT_DHT_Stop; stdcall; external DLBT_Library name 'DLBT_DHT_Stop';
  function  DLBT_DHT_IsStarted; stdcall; external DLBT_Library name 'DLBT_DHT_IsStarted';
  procedure DLBT_SetProxy; stdcall; external DLBT_Library name 'DLBT_SetProxy';
  procedure DLBT_GetProxySetting; stdcall; external DLBT_Library name 'DLBT_GetProxySetting';
  procedure DLBT_SetEncryptSetting; stdcall; external DLBT_Library name 'DLBT_SetEncryptSetting';

  function  DLBT_Downloader_Initialize; stdcall; external DLBT_Library name 'DLBT_Downloader_Initialize';
  function  DLBT_Downloader_Initialize_FromBuffer; stdcall; external DLBT_Library name 'DLBT_Downloader_Initialize_FromBuffer';
  function DLBT_Downloader_Initialize_FromTorrentHandle; stdcall external DLBT_Library name 'DLBT_Downloader_Initialize_FromTorrentHandle';
  function DLBT_Downloader_Initialize_FromInfoHash; stdcall external DLBT_Library name 'DLBT_Downloader_Initialize_FromInfoHash';
  function DLBT_Downloader_Initialize_FromUrl; stdcall external DLBT_Library name 'DLBT_Downloader_Initialize_FromUrl';
  function DLBT_Downloader_InitializeAsUpdater; stdcall external DLBT_Library name 'DLBT_Downloader_InitializeAsUpdater';
  function DLBT_Downloader_GetOldTorrentProgress; stdcall external DLBT_Library name 'DLBT_Downloader_GetOldTorrentProgress';  
  procedure DLBT_Downloader_ReleaseAllFiles; stdcall; external DLBT_Library name 'DLBT_Downloader_ReleaseAllFiles';
  function DLBT_Downloader_IsReleasingFiles; stdcall; external DLBT_Library name 'DLBT_Downloader_IsReleasingFiles';
  function  DLBT_Downloader_Release; stdcall; external DLBT_Library name 'DLBT_Downloader_Release';
